src/App.css
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";
* {
  font-family: "Inter", sans-serif;
}

#root {
  display: flex;
  flex-direction: column;
  height: 100%;
}

html,
body {
  min-height: 100%;
}

body {
  margin: 0;
}

.app-bg,
body {
  background-image: url(./timetracker/assets/background.png),
    linear-gradient(
      to bottom,
      rgba(48, 188, 237, 100%),
      rgba(63, 141, 169, 61.33%),
      rgba(0, 102, 255, 25%)
    );

  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

.app-bg {
  min-height: calc(100vh - 4rem);
}

